[project]
name = "bleprinter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benji", email = "figbert@figbert.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
bleprinter = "bleprinter:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
